文章を再構成

--- a/k7f3.html
+++ b/k7f3.html
@@ -10,72 +10,112 @@
   <div class="container">
     <div class="card">
 
-      <h1 class="title">この作品は、人間がすべて制作しました</h1>
+      <h1 class="title">AI否定的</h1>
 
       <p>
-        この作品は、人間の手によって制作されたものである。<br>
-        ここにAIは関与していない。
+      本作品で表示している映像はプログラムによって動作しており、
+      アルゴリズム設計、描画構造、色彩変化、動きは、
+      作者が意図し、選び取り、責任を引き受けた結果です。
+      そこにAIは介入していません。
+      </p>
+
+      <p> 
+      創造とは、人間の時間によって育まれる営みです。
+      そしてそれは、
+      計算や統計だけで成立するものではありません。
       </p>
 
       <p>
-        なぜなら、芸術とは単なる結果物ではなく、<br>
-        そこに至るまでの思考、迷い、試行錯誤、そして情熱そのものだからである。
+      人間が何年もかけて試行錯誤し、
+      失敗を繰り返し、
+      身体と情熱を通して習得される技術。
+      その積み重ねの先に、
+      表現の重みと意味が宿ります。
+      創造は、速度や規模で測れるものではありません。
       </p>
 
       <p>
-        人間は時間をかけ、失敗を重ね、<br>
-        自らの身体と感情を通して制作を行う。<br>
-        その過程にこそ、作品としての価値が宿る。
+      近年、生成AIによる作品が急速に広がっています。
+      膨大な知識を参照し、
+      過去の理論や様式を高速で組み合わせることができます。
+      しかしそれは、
+      経験や葛藤の中で創発されたものとは異なります。
+      人間が「技術」や「情熱」と呼んできたものは、
+      単なるパターンではありません。
       </p>
 
       <p>
-        近年、AIによって生成された映像や絵画が<br>
-        「芸術」として扱われる場面が増えてきた。
+      AIは構造を模倣することはできても、
+      なぜそれを表現するのかという問いに悩むことはできません。
+      感情の揺らぎや、
+      迷いの痕跡までは表現できないのです。
+      創造とは、
+      内面との葛藤を伴う営みです。
       </p>
 
       <p>
-        しかし、AIは痛みを知らず、葛藤を知らず、<br>
-        何かを賭けて制作することもない。<br>
-        そこには責任も覚悟も存在しない。
+      歴史を振り返れば、
+      蒸気機関が労働を変え、
+      写真が絵画の役割を変え、
+      インターネットが情報の在り方を変えました。
+      しかしそのたびに、
+      人間は新しい表現を見出してきました。
+      創造の中心が人間から移ったことはありません。
       </p>
 
       <p>
-        AIは大量のデータを参照し、<br>
-        過去の表現を組み合わせて<br>
-        “それらしく見えるもの”を生成することはできる。
+      生成AIは進化を続けています。
+      モデルは更新され、
+      計算資源は拡張され、
+      学習データは増え続けています。
+      しかしそれらは、
+      人間の経験や努力を材料として消費しているにすぎません。
       </p>
 
       <p>
-        だがそれは模倣であり、再構成であり、<br>
-        創作ではない。
+      やがて人間が何年もかけて生み出した作品と
+      遜色のないクオリティの表現が、
+      大量に生成されるようになるかもしれません。
+      しかし創造とは、
+      品質や効率だけで語れるものではありません。
       </p>
 
       <p>
-        人間の手仕事は、非効率で、遠回りで、不完全である。<br>
-        しかしその不完全さこそが、<br>
-        作品に固有の価値と重みを与える。
+      人間は創造を提供する存在であり続けます。
+      創造を体験するだけの存在へと
+      後退することはありません。
       </p>
 
       <p>
-        職人の技術が年月とともに磨かれていくように、<br>
-        芸術の価値もまた、制作者自身の成長とともに高まっていく。
+      気持ちの良い映像や音楽、
+      洗練されたデザインが自動生成されたとしても、
+      そこに意味を与えるのは人間です。
+      問いを立てるのも、
+      責任を引き受けるのも、
+      人間です。
       </p>
 
       <p>
-        AIがどれほど高度になろうとも、<br>
-        そこに「想い」が宿ることはない。
+      もしこの映像に面白さや美しさを感じるなら、
+      それは人間の意思と情熱が生み出した結果かもしれません。
       </p>
 
       <p>
-        想いのない表現は、どれほど美しくとも、<br>
-        芸術とは呼べない。
+      AIは計算します。
+      しかし、人間は意味を与えます。
+      その違いは大きな意味を持っています。
       </p>
 
       <p>
-        この作品は、<br>
-        人間の手仕事が持つ偉大さと、<br>
-        人間だけが持ち得る創造の価値を示すために制作された。
+      創造の中心は、いまもこれからも人間にあります。
       </p>
+
+      <p>
+      この作品は、<br>
+      人間が創造の中心に立ち続けること、<br>
+      そして手仕事と情熱が持つ価値を示すために制作されました。
+      </p>
+
 
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
       <div id="scroll-end" style="height: 1px;"></div>
