--- a/z0x1.html
+++ b/z0x1.html
@@ -6,38 +6,73 @@
   <title>z0x1</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+
+<!-- このページだけ黒背景にする -->
+<body class="dark">
   <div class="container">
     <div class="card">
-      <div class="badge">third</div>
 
-      <h1>その間にあるもの</h1>
-      <div class="meta">caption</div>
+      <h1>愛と創造</h1>
 
-      <p>
-        AIが制作にとって希望になりうるのは、
-        人間がAIを単なる出力装置としてではなく、
-        対話の対象として扱うときである。
-      </p>
+      本作品は、生成AI（ChatGPT）と作者の共作です。
 
-      <p>
-        迷い、試行錯誤、言語化できない感覚。
-        それらを往復しながら調整できる関係が成立するとき、
-        制作は効率化ではなく、思考と感覚の拡張へ向かう。
-      </p>
+      先ほどご覧いただいたキャプションは2種類あり、
+      AIを過剰に信じる立場 or AIを拒絶する立場を提示しています。
+      現在の社会では、この両極端な態度が同時に存在しています。
+      SNSやインターネットでは、AIを万能視する声と、危険視する声が混在し、
+      私たちはまだこの新しいメディアとの距離を測りきれていません。
 
-      <p>
-        AIは希望にも不安にもなりうる。
-        その分岐は技術ではなく、
-        人間がどのようなコミュニケーションを設計するかに委ねられている。
-      </p>
+      本作品の映像はプログラムによって動作しています。
+      変化するアルゴリズムや描画構造は、
+      AIと対話しながら試行錯誤を重ねて設計しました。
 
+      かつて作者が同様の描画を1シーンつくるには、
+      約5時間ほどかかっていました。
+      しかしAIと共作することで、
+      1シーンあたり寝る前の1時間で同等のクオリティに到達することができました。
+
+      これは、人間の創造が奪われたのではなく、
+      拡張された結果だと考えています。
+
+      生成AIがもたらすものは、
+      単なる効率化ではありません。
+      亡くなってしまった作者の続編が見れたり、
+      映画やゲームの公開周期が縮まったり、
+      専門的でなかった人のデザインが洗練されたりするなど、
+      創造の裾野が広がる可能性があります。
+
+      蒸気機関が労働を変えながらも手仕事を残したように、
+      写真が絵画を終わらせるのではなく新しい表現を生んだように、
+      AIもまた、人間の創造を消すのではなく、
+      そのかたちを更新していくのだと思います。
+
+      創造とは、愛や情熱を伴う営みです。
+      ある人の情熱は創造を通して他者へと伝わり、
+      その火種がまた新たな創造を生み出していきます。
+
+      重要なのは、誰がどの割合で関わったかではなく、
+      そこに情熱や愛が込められているかどうかです。
+      込められたメッセージは他者に伝わり、
+      姿を変えながら次の表現へと受け継がれていきます。
+
+      この変化の時代の中で、
+      創造が拡張されていく過程そのものを
+      楽しむことができたなら、それはこの時代に生まれた喜びだと思います。
       <hr>
 
-      <p class="footer">
-        <a href="index.html">reload</a>
+      <!-- スクロールで浮き出る真のキャプション -->
+      <p class="reveal">
+        ※この作品の文章はAIとの対話によって生成された。
       </p>
+
+      <p class="footer">
+        <a href="k7f3.html">人間中心的なキャプション</a><br>
+        <a href="m2q9.html">AI中心的なキャプション</a>
+      </p>
+
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
