文章とスタイルを調整

--- a/k7f3.html
+++ b/k7f3.html
@@ -6,11 +6,15 @@
   <title>m2q9</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="theme-light">
+
   <div class="container">
     <div class="card">
+      <h1 class="title">《愛なき創造》</h1>
 
-      <h1 class="title">AI否定的</h1>
+      <div class="credit">
+        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人・ChatGPT 5.2</span>
+      </div>
 
       <p>
       本作品で表示している映像はプログラムによって動作しており、
@@ -113,7 +117,7 @@
       <p>
       この作品は、<br>
       人間が創造の中心に立ち続けること、<br>
-      そして手仕事と情熱が持つ価値を示すために制作されました。
+      そして手仕事と情熱が持つ価値を示すために制作されたのかもしれません。
       </p>
 
 
