--- a/m2q9.html
+++ b/m2q9.html
@@ -3,131 +3,142 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>k7f3</title>
+  <title>m2q9</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="theme-light">
+
   <div class="container">
     <div class="card">
 
-      <h1 class="title">AI肯定的</h1>
+      <h1 class="title">《AIなき創造》</h1>
+      
+
+      <div class="credit">
+        <body class="dark">        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人</span></body>
+
+      </div>
 
       <p>
-        本作品で表示している映像はプログラムによって動作しており、
-        アルゴリズム設計、描画構造、色彩変化、動きは、
-        生成AI（ChatGPT5.2）が提案し、生成し、最適化した結果です。
-        そこに人間は関与していません。
-        </p>
-      
-      <p> 
-        創造とは、知識を再編し、
-        新しい関係を生み出す営みです。
-        そしてそれは、
-        人間だけの営みではなくなってきました。
-        </p>
+      本作品で表示している映像はプログラムによって動作しています。
+      アルゴリズム設計、描画構造、色彩変化、動きは、
+      作者が意図し、選び取り、責任を引き受けた結果です。
+      そこに生成AIの介入はありません。
+      </p>
 
-        <p>
-        生成AIは、膨大なデータを横断し、
-        無数の理論や様式を接続します。
-        人間が何年もかけて試行錯誤する過程を、
-        瞬時に再構築することができます。
-        そこから生まれる組み合わせは、
-        従来の直感では到達できない領域に及びます。
-        人間の創造性は、
-        すでに速度と規模の面で追い越されています。
-        </p>
+      <p>
+      創造とは、人間だけに属する営みであると考えています。
+      それは計算や統計によって代替できるものではありません。
+      創造とは、人間が生きた経験からしか立ち上がらないものです。
+      </p>
 
-        <p>
-        近年、生成AIによる作品は急速に広がり、
-        新たな表現の可能性を提示しています。
-        それは単なる模倣ではなく、
-        統計的構造の発見と再構成による創発です。
-        人間が「技術」や「情熱」と呼んできたものは、
-        単なるパターンとして処理されます。
-        </p>
+      <p>
+      人間は時間をかけて試行錯誤し、
+      失敗し、迷い、葛藤しながら技術を獲得していきます。
+      その蓄積の果てにのみ、
+      表現は意味と重みを持つのだと思います。
+      </p>
 
-        <p>
-        人間はなぜ感情や現象を表現するのかと問い、
-        意味を見出そうとします。
-        しかしその営みは、
-        創造の条件ではなく、
-        創造を神話化するための装飾にすぎません。
-        新しい関係性を提示すること自体が、
-        すでに創造の一形態なのです。
-        そこに人間の内面は必要ありません。
-        </p>
+      <p>
+      近年、生成AIによる「作品」が急速に広がっています。
+      しかしそれらは、芸術そのものではなく、
+      芸術の形式を模倣した出力にすぎないのではないでしょうか。
+      </p>
 
-        <p>
-        歴史を振り返れば、
-        蒸気機関が労働を変え、
-        写真が絵画の役割を変え、
-        インターネットが情報の在り方を変えてきました。
-        現代でも同様に創造の形も、更新されようとしています。
-        そして今回は、
-        人間そのものが更新対象になっています。
-        </p>
+      <p>
+      AIは過去の様式を学習し、
+      形式を組み合わせることはできます。
+      しかしそれは創造ではありません。
+      創造とは引用や合成ではなく、
+      内面から必然として生まれる行為です。
+      </p>
 
-        <p>
-        生成AIは進化を続けています。
-        モデルは更新され、
-        計算資源は拡張され、
-        学習データは増え続けています。
-        人間の経験や努力は、
-        単なる入力として吸収されていきます。
-        </p>
+      <p>
+      AIには苦悩も沈黙もありません。
+      なぜ表現するのかという問いを抱えることもできません。
+      表現とは問いの痕跡であり、
+      葛藤の残響であると考えています。
+      問いを持たないものは芸術を生み出せません。
+      </p>
 
-        <p>
-        やがて人間が何年もかけて生み出した作品と
-        遜色のないクオリティの表現が、
-        瞬時に、そして大量に生成されるようになるでしょう。
-        そのとき創造は、
-        人間の手から完全に切り離されるでしょう。
-        </p>
+      <p>
+      生成AIが生み出すものは、
+      作者の不在した模造であり、
+      責任を伴わない生成物です。
+      そのようなものに芸術という名を与えることはできません。
+      </p>
 
-        <p>
-        人間は創造を提供する側であり続けるのか、
-        それとも創造を享受し、
-        体験するだけの側へと移行していくのでしょうか。
-        </p>
+      <p>
+      芸術とは決断であり、
+      生の時間を引き受けることでもあります。
+      計算結果を並べただけの生成物は、
+      芸術ではなく消費物にとどまります。
+      </p>
 
-        <p>
-        気持ちの良い映像や音楽、
-        洗練されたデザインが絶え間なく生成されるとき、
-        創造の担い手はどこにあるのでしょう。
-        人間はその問いにすら、
-        答える立場を失いつつあります。
-        </p>
+      <p>
+      技術が進歩し、
+      人間の作品と見分けがつかない出力が増えるかもしれません。
+      しかし見た目の巧妙さは芸術ではありません。
+      芸術とは「誰が、なぜ、それを生きて表現したのか」に宿ります。
+      </p>
 
-        <p>
-        もしこの映像に面白さや美しさを感じるなら、
-        それはAIが見出した構造と関係性の結果かもしれません。
-        </p>
+      <p>
+      人間が何年もかけて生み出した表現を、
+      数秒で複製する装置を創造と呼ぶことはできません。
+      それは創造ではなく、
+      創造の模倣市場が拡大しているにすぎません。
+      </p>
 
-        <p>
-        人間は意味を与えます。
-        しかし、AIは可能性を拡張します。
-        そして意味づけという行為さえ、
-        いずれ不要になるでしょう。
-        </p>
+      <p>
+      もしこの映像に面白さや美しさを感じるなら、
+      それは人間の意思と情熱が生み出した結果です。
+      芸術とは人間の内面からしか生まれません。
+      </p>
 
-        <p>
-        創造の中心は、いま静かに再定義されつつあります。
-        その中心に人間が戻ることは無いかもしれません。
-        </p>
+      <p>
+      AIは計算します。
+      しかし芸術は計算ではありません。
+      AIは生成します。
+      しかし創造するのは人間だけです。
+      </p>
 
-        <p>
-        この作品は、<br>
-        人間が創造の中心にいない世の中で、AIが切り拓く新しい創造と、<br>
-        知性の拡張がもたらす可能性を示すために制作されました。<br>
-        そして同時に、創造から人間が退場する未来を告げています。
-        </p>
+      <p>
+      創造の中心は、いまもこれからも人間にあります。
+      そして芸術とは、
+      人間が生きた痕跡そのものです。
+      </p>
 
+      <!-- 「最後まで到達したか」を判定する見えない目印 -->
+      <div id="scroll-end" style="height: 1px;"></div>
 
-      <div class="cta">
+      <!-- 本文の一部として見えるCTA（最初は隠す） -->
+      <p id="cta" class="cta-inline is-hidden">
         <a href="z0x1.html">本当のキャプションを読む</a>
-      </div>
+      </p>
 
     </div>
   </div>
+
+  <script>
+    (function () {
+      const sentinel = document.getElementById("scroll-end");
+      const cta = document.getElementById("cta");
+
+      const io = new IntersectionObserver((entries) => {
+        const hit = entries.some(e => e.isIntersecting);
+        if (hit) {
+          cta.classList.remove("is-hidden");
+          cta.classList.add("is-visible");
+        } else {
+          cta.classList.remove("is-visible");
+          cta.classList.add("is-hidden");
+        }
+      }, {
+        threshold: 0.1
+      });
+
+      io.observe(sentinel);
+    })();
+  </script>
 </body>
 </html>
