--- a/z0x1.html
+++ b/z0x1.html
@@ -8,11 +8,18 @@
 </head>
 
 <!-- このページだけ黒背景にする -->
-<body class="dark">
+<body class="theme-dark">
   <div class="container">
     <div class="card">
 
-      <h1>愛と創造</h1>
+      <h1 class="title">《拡張される創造》</h1>
+      
+
+      <div class="credit">
+        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人・ChatGPT 5.2</span>
+      </div>
+
+      <br>
 
       本作品は、生成AI（ChatGPT）と作者の共作です。
 
@@ -29,7 +36,7 @@
       かつて作者が同様の描画を1シーンつくるには、
       約5時間ほどかかっていました。
       しかしAIと共作することで、
-      1シーンあたり寝る前の1時間で同等のクオリティに到達することができました。
+      寝る前の1時間で同等のクオリティの1シーンを作ることができました。
 
       これは、人間の創造が奪われたのではなく、
       拡張された結果だと考えています。
@@ -66,8 +73,8 @@
       </p>
 
       <p class="footer">
-        <a href="k7f3.html">人間中心的なキャプション</a><br>
-        <a href="m2q9.html">AI中心的なキャプション</a>
+        <a href="k7f3.html">AIに対して批判的なキャプション</a><br>
+        <a href="m2q9.html">AIに対して肯定的なキャプション</a>
       </p>
 
     </div>
