段落調整とcss調整

--- a/k7f3.html
+++ b/k7f3.html
@@ -15,7 +15,7 @@
       <div class="credit">
         <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人・ChatGPT 5.2</span>
       </div>
-
+      <div class="text">
       <p>
       本作品で表示している映像はプログラムによって動作しており、
       アルゴリズム設計、描画構造、色彩変化、動きは、
@@ -119,7 +119,7 @@
       人間が創造の中心に立ち続けること、<br>
       そして手仕事と情熱が持つ価値を示すために制作されたのかもしれません。
       </p>
-
+      </div>
 
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
       <div id="scroll-end" style="height: 1px;"></div>
