--- a/m2q9.html
+++ b/m2q9.html
@@ -18,7 +18,7 @@
         <body class="dark">        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人</span></body>
 
       </div>
-
+      <div class="text">
       <p>
       本作品で表示している映像はプログラムによって動作しています。
       アルゴリズム設計、描画構造、色彩変化、動きは、
@@ -108,13 +108,14 @@
       人間が生きた痕跡そのものです。
       </p>
 
+      </div>
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
       <div id="scroll-end" style="height: 1px;"></div>
 
       <!-- 本文の一部として見えるCTA（最初は隠す） -->
-      <p id="cta" class="cta-inline is-hidden">
-        <a href="z0x1.html">本当のキャプションを読む</a>
-      </p>
+      <div id="cta" class="cta-inline is-hidden">
+      <a href="z0x1.html">本当のキャプションを読む</a>
+      </div>
 
     </div>
   </div>
