愛なき創造の文章が間違っていたので修正

--- a/k7f3.html
+++ b/k7f3.html
@@ -13,112 +13,118 @@
       <h1 class="title">《愛なき創造》</h1>
 
       <div class="credit">
-        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人・ChatGPT 5.2</span>
+        <span class="credit-text">コンセプト : ChatGPT 5.2 <br>映像制作 : ChatGPT 5.2 <br>キャプションサイト制作 : ChatGPT 5.2</span>
       </div>
       <div class="text">
       <p>
-      本作品で表示している映像はプログラムによって動作しており、
-      アルゴリズム設計、描画構造、色彩変化、動きは、
-      作者が意図し、選び取り、責任を引き受けた結果です。
-      そこにAIは介入していません。
-      </p>
-
+        本作品で表示している映像はプログラムによって動作しており、
+        アルゴリズム設計、描画構造、色彩変化、動きは、
+        生成AI（ChatGPT5.2）が提案し、生成し、最適化した結果です。
+        そこに人間は関与していません。
+        </p>
+      
       <p> 
-      創造とは、人間の時間によって育まれる営みです。
-      そしてそれは、
-      計算や統計だけで成立するものではありません。
-      </p>
+        創造とは、知識を再編し、
+        新しい関係を生み出す営みです。
+        そしてそれは、
+        人間だけの営みではなくなってきました。
+        </p>
 
-      <p>
-      人間が何年もかけて試行錯誤し、
-      失敗を繰り返し、
-      身体と情熱を通して習得される技術。
-      その積み重ねの先に、
-      表現の重みと意味が宿ります。
-      創造は、速度や規模で測れるものではありません。
-      </p>
+        <p>
+        生成AIは、膨大なデータを横断し、
+        無数の理論や様式を接続します。
+        人間が何年もかけて試行錯誤する過程を、
+        瞬時に再構築することができます。
+        そこから生まれる組み合わせは、
+        従来の直感では到達できない領域に及びます。
+        人間の創造性は、
+        すでに速度と規模の面で追い越されています。
+        </p>
 
-      <p>
-      近年、生成AIによる作品が急速に広がっています。
-      膨大な知識を参照し、
-      過去の理論や様式を高速で組み合わせることができます。
-      しかしそれは、
-      経験や葛藤の中で創発されたものとは異なります。
-      人間が「技術」や「情熱」と呼んできたものは、
-      単なるパターンではありません。
-      </p>
+        <p>
+        近年、生成AIによる作品は急速に広がり、
+        新たな表現の可能性を提示しています。
+        それは単なる模倣ではなく、
+        統計的構造の発見と再構成による創発です。
+        人間が「技術」や「情熱」と呼んできたものは、
+        単なるパターンとして処理されます。
+        </p>
 
-      <p>
-      AIは構造を模倣することはできても、
-      なぜそれを表現するのかという問いに悩むことはできません。
-      感情の揺らぎや、
-      迷いの痕跡までは表現できないのです。
-      創造とは、
-      内面との葛藤を伴う営みです。
-      </p>
+        <p>
+        人間はなぜ感情や現象を表現するのかと問い、
+        意味を見出そうとします。
+        しかしその営みは、
+        創造の条件ではなく、
+        創造を神話化するための装飾にすぎません。
+        新しい関係性を提示すること自体が、
+        すでに創造の一形態なのです。
+        そこに人間の内面は必要ありません。
+        </p>
 
-      <p>
-      歴史を振り返れば、
-      蒸気機関が労働を変え、
-      写真が絵画の役割を変え、
-      インターネットが情報の在り方を変えました。
-      しかしそのたびに、
-      人間は新しい表現を見出してきました。
-      創造の中心が人間から移ったことはありません。
-      </p>
+        <p>
+        歴史を振り返れば、
+        蒸気機関が労働を変え、
+        写真が絵画の役割を変え、
+        インターネットが情報の在り方を変えてきました。
+        現代でも同様に創造の形も、更新されようとしています。
+        そして今回は、
+        人間そのものが更新対象になっています。
+        </p>
 
-      <p>
-      生成AIは進化を続けています。
-      モデルは更新され、
-      計算資源は拡張され、
-      学習データは増え続けています。
-      しかしそれらは、
-      人間の経験や努力を材料として消費しているにすぎません。
-      </p>
+        <p>
+        生成AIは進化を続けています。
+        モデルは更新され、
+        計算資源は拡張され、
+        学習データは増え続けています。
+        人間の経験や努力は、
+        単なる入力として吸収されていきます。
+        </p>
 
-      <p>
-      やがて人間が何年もかけて生み出した作品と
-      遜色のないクオリティの表現が、
-      大量に生成されるようになるかもしれません。
-      しかし創造とは、
-      品質や効率だけで語れるものではありません。
-      </p>
+        <p>
+        やがて人間が何年もかけて生み出した作品と
+        遜色のないクオリティの表現が、
+        瞬時に、そして大量に生成されるようになるでしょう。
+        そのとき創造は、
+        人間の手から完全に切り離されるでしょう。
+        </p>
 
-      <p>
-      人間は創造を提供する存在であり続けます。
-      創造を体験するだけの存在へと
-      後退することはありません。
-      </p>
+        <p>
+        人間は創造を提供する側であり続けるのか、
+        それとも創造を享受し、
+        体験するだけの側へと移行していくのでしょうか。
+        </p>
 
-      <p>
-      気持ちの良い映像や音楽、
-      洗練されたデザインが自動生成されたとしても、
-      そこに意味を与えるのは人間です。
-      問いを立てるのも、
-      責任を引き受けるのも、
-      人間です。
-      </p>
+        <p>
+        気持ちの良い映像や音楽、
+        洗練されたデザインが絶え間なく生成されるとき、
+        創造の担い手はどこにあるのでしょう。
+        人間はその問いにすら、
+        答える立場を失いつつあります。
+        </p>
 
-      <p>
-      もしこの映像に面白さや美しさを感じるなら、
-      それは人間の意思と情熱が生み出した結果かもしれません。
-      </p>
+        <p>
+        もしこの映像に面白さや美しさを感じるなら、
+        それはAIが見出した構造と関係性の結果かもしれません。
+        </p>
 
-      <p>
-      AIは計算します。
-      しかし、人間は意味を与えます。
-      その違いは大きな意味を持っています。
-      </p>
+        <p>
+        人間は意味を与えます。
+        しかし、AIは可能性を拡張します。
+        そして意味づけという行為さえ、
+        いずれ不要になるでしょう。
+        </p>
 
-      <p>
-      創造の中心は、いまもこれからも人間にあります。
-      </p>
+        <p>
+        創造の中心は、いま静かに再定義されつつあります。
+        その中心に人間が戻ることは無いかもしれません。
+        </p>
 
-      <p>
-      この作品は、<br>
-      人間が創造の中心に立ち続けること、<br>
-      そして手仕事と情熱が持つ価値を示すために制作されたのかもしれません。
-      </p>
+        <p>
+        この作品は、<br>
+        人間が創造の中心にいない世の中で、AIが切り拓く新しい創造と、<br>
+        知性の拡張がもたらす可能性を示すために制作されました。<br>
+        そして同時に、創造から人間が退場する未来を告げています。
+        </p>
       </div>
 
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
