--- a/m2q9.html
+++ b/m2q9.html
@@ -15,7 +15,7 @@
       
 
       <div class="credit">
-        <body class="dark">        <span class="credit-text">コンセプト <br>映像制作 <br>キャプションサイト制作 : 清水海人</span></body>
+        <body class="dark">        <span class="credit-text">コンセプト : 清水海人 <br>映像制作 : 清水海人 <br>キャプションサイト制作 : 清水海人</span></body>
 
       </div>
       <div class="text">
