タイトルを修正

--- a/k7f3.html
+++ b/k7f3.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <div class="card">
-      <h1 class="title">《愛なき創造》</h1>
+      <h1 class="title">《AIによる創造》</h1>
 
       <div class="credit">
         <span class="credit-text">コンセプト : ChatGPT 5.2 <br>映像制作 : ChatGPT 5.2 <br>キャプションサイト制作 : ChatGPT 5.2</span>
