--- a/m2q9.html
+++ b/m2q9.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="card">
 
-      <h1 class="title">《AIなき創造》</h1>
+      <h1 class="title">《愛による創造》</h1>
       
 
       <div class="credit">
