--- a/z0x1.html
+++ b/z0x1.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="card">
 
-      <h1 class="title">《拡張される創造》</h1>
+      <h1 class="title">《AIと愛による創造》</h1>
 
       <div class="credit">
         <span class="credit-text">
