--- a/z0x1.html
+++ b/z0x1.html
@@ -27,8 +27,8 @@
         </p>
 
         <p>
-          先ほどご覧いただいたキャプションは2種類あり、
-          AIを過剰に信じる立場、あるいはAIを拒絶する立場を提示しています。
+          先ほどご覧いただいたキャプションは2種類用意されており、
+          AIを過剰に信じる立場、あるいはAIを拒絶する立場のどちらかが表示されるようになっています。
           現在の社会では、この両極端な態度が同時に存在しています。
         </p>
 
