閲覧数取得機能を追加

--- a/z0x1.html
+++ b/z0x1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>z0x1</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9f530fa039034a55860b00d50847fe76"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body class="theme-dark">
