--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       location.replace(pick);
     })();
   </script>
+
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9f530fa039034a55860b00d50847fe76"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 <body>
   <noscript>
