文章を最終盤に修正

--- a/m2q9.html
+++ b/m2q9.html
@@ -21,93 +21,43 @@
       </div>
       <div class="text">
       <p>
-      本作品で表示している映像はプログラムによって動作しています。
-      アルゴリズム設計、描画構造、色彩変化、動きは、
-      作者が意図し、選び取り、責任を引き受けた結果です。
-      そこに生成AIの介入はありません。
+        本作品の映像はプログラムによって動作しており、
+        アルゴリズム設計、描画構造、色彩変化や動きは、
+        作者が意図し、選び取り、責任を引き受けた結果です。
+        そこに生成AIの介入はありません。
       </p>
 
       <p>
-      創造とは、人間だけに属する営みであると考えています。
-      それは計算や統計によって代替できるものではありません。
-      創造とは、人間が生きた経験からしか立ち上がらないものです。
+        創造とは、人間が生きた経験からしか立ち上がらない営みです。
+        試行錯誤し、迷い、葛藤しながら獲得された技術の蓄積の果てに、
+        表現は意味と重みを持つのだと考えています。
       </p>
 
       <p>
-      人間は時間をかけて試行錯誤し、
-      失敗し、迷い、葛藤しながら技術を獲得していきます。
-      その蓄積の果てにのみ、
-      表現は意味と重みを持つのだと思います。
+        生成AIは過去の様式を学習し、形式を組み合わせることはできます。
+        しかしそこに苦悩も沈黙もなく、
+        「なぜ表現するのか」という問いを抱えることもできません。
       </p>
 
       <p>
-      近年、生成AIによる「作品」が急速に広がっています。
-      しかしそれらは、芸術そのものではなく、
-      芸術の形式を模倣した出力にすぎないのではないでしょうか。
+        芸術とは決断であり、生の時間を引き受ける行為です。
+        見た目の巧妙さではなく、
+        「誰が、なぜ、それを生きて表現したのか」に宿ります。
+        創造の中心は、いまもこれからも人間にあります。
       </p>
 
-      <p>
-      AIは過去の様式を学習し、
-      形式を組み合わせることはできます。
-      しかしそれは創造ではありません。
-      創造とは引用や合成ではなく、
-      内面から必然として生まれる行為です。
+       <p>
+        作品に込められた「情熱」や「温かみ」は作者の人生が反映されています。
+        生成AIが生成した表現は、それらの人生の上積みしか掬い上げることができません。
+        結果として、味気のない表現に落ち着きます。
+        人間が生涯にできる表現には限界があります。
+        AIよりもはるかに濃い作品を作ることができます。
+        これからも、創造の中心は人間から移ることはありません。
       </p>
-
       <p>
-      AIには苦悩も沈黙もありません。
-      なぜ表現するのかという問いを抱えることもできません。
-      表現とは問いの痕跡であり、
-      葛藤の残響であると考えています。
-      問いを持たないものは芸術を生み出せません。
-      </p>
-
-      <p>
-      生成AIが生み出すものは、
-      作者の不在した模造であり、
-      責任を伴わない生成物です。
-      そのようなものに芸術という名を与えることはできません。
-      </p>
-
-      <p>
-      芸術とは決断であり、
-      生の時間を引き受けることでもあります。
-      計算結果を並べただけの生成物は、
-      芸術ではなく消費物にとどまります。
-      </p>
-
-      <p>
-      技術が進歩し、
-      人間の作品と見分けがつかない出力が増えるかもしれません。
-      しかし見た目の巧妙さは芸術ではありません。
-      芸術とは「誰が、なぜ、それを生きて表現したのか」に宿ります。
-      </p>
-
-      <p>
-      人間が何年もかけて生み出した表現を、
-      数秒で複製する装置を創造と呼ぶことはできません。
-      それは創造ではなく、
-      創造の模倣市場が拡大しているにすぎません。
-      </p>
-
-      <p>
-      もしこの映像に面白さや美しさを感じるなら、
-      それは人間の意思と情熱が生み出した結果です。
-      芸術とは人間の内面からしか生まれません。
-      </p>
-
-      <p>
-      AIは計算します。
-      しかし芸術は計算ではありません。
-      AIは生成します。
-      しかし創造するのは人間だけです。
-      </p>
-
-      <p>
-      創造の中心は、いまもこれからも人間にあります。
-      そして芸術とは、
-      人間が生きた痕跡そのものです。
-      </p>
+        本作品は、人間が単独で制作した作品を鑑賞することで、これからも創造の中心が変わらないことを示す作品なのかもしれません。
+    </p>
+    </div>
 
       </div>
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
@@ -115,7 +65,7 @@
 
       <!-- 本文の一部として見えるCTA（最初は隠す） -->
       <div id="cta" class="cta-inline is-hidden">
-      <a href="z0x1.html">本当のキャプションを読む</a>
+      <a href="z0x1.html">真実を知る</a>
       </div>
 
     </div>
