--- a/z0x1.html
+++ b/z0x1.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="card">
 
-      <h1 class="title">《AIと愛による創造》</h1>
+      <h1 class="title">《真実を知る》</h1>
 
       <div class="credit">
         <span class="credit-text">
@@ -24,12 +24,16 @@
 
       <div class="text">
         <p>
+          こちらのキャプションが本作品の本当のキャプションになっています。
+        </p>
+        
+        <p>
           本作品は、生成AI（ChatGPT）と作者の共作です。
         </p>
 
         <p>
           先ほどご覧いただいたキャプションは2種類用意されており、
-          AIを過剰に信じる立場、あるいはAIを拒絶する立場のどちらかが表示されるようになっています。
+          QRコードを読むと「AIを過剰に信じる立場」、あるいは「AIを過剰に否定する立場」のどちらかがランダムで選ばれ表示されるようになっています。
           現在の社会では、この両極端な態度が同時に存在しています。
         </p>
 
