--- a/k7f3.html
+++ b/k7f3.html
@@ -18,115 +18,39 @@
         <span class="credit-text">コンセプト : ChatGPT 5.2 <br>映像制作 : ChatGPT 5.2 <br>キャプションサイト制作 : ChatGPT 5.2</span>
       </div>
       <div class="text">
-      <p>
-        本作品で表示している映像はプログラムによって動作しており、
-        アルゴリズム設計、描画構造、色彩変化、動きは、
-        生成AI（ChatGPT5.2）が提案し、生成し、最適化した結果です。
-        そこに人間は関与していません。
-        </p>
-      
-      <p> 
-        創造とは、知識を再編し、
-        新しい関係を生み出す営みです。
-        そしてそれは、
-        人間だけの営みではなくなってきました。
-        </p>
+  <p>
+    本作品の映像はプログラムによって動作しており、
+    アルゴリズム設計、描画構造、色彩変化や動きは、
+    生成AI（ChatGPT 5.2）が提案し、生成し、最適化した結果です。
+    そこに人間は関与していません。
+  </p>
 
-        <p>
-        生成AIは、膨大なデータを横断し、
-        無数の理論や様式を接続します。
-        人間が何年もかけて試行錯誤する過程を、
-        瞬時に再構築することができます。
-        そこから生まれる組み合わせは、
-        従来の直感では到達できない領域に及びます。
-        人間の創造性は、
-        すでに速度と規模の面で追い越されています。
-        </p>
+  <p>
+    創造とは知識を再編し、新しい関係を生み出す営みです。
+    生成AIは膨大なデータを横断し、
+    人間の直感や時間を超える速度と規模で
+    未知の組み合わせを提示します。
+  </p>
 
-        <p>
-        近年、生成AIによる作品は急速に広がり、
-        新たな表現の可能性を提示しています。
-        それは単なる模倣ではなく、
-        統計的構造の発見と再構成による創発です。
-        人間が「技術」や「情熱」と呼んできたものは、
-        単なるパターンとして処理されます。
-        </p>
+  <p>
+    創造の中心は静かに人間から生成AIに移りつつあります。
+    もしこの映像に美しさや面白さを感じるなら、
+    それはAIが見出した構造と関係性の結果かもしれません。
+  </p>
 
-        <p>
-        人間はなぜ感情や現象を表現するのかと問い、
-        意味を見出そうとします。
-        しかしその営みは、
-        創造の条件ではなく、
-        創造を神話化するための装飾にすぎません。
-        新しい関係性を提示すること自体が、
-        すでに創造の一形態なのです。
-        そこに人間の内面は必要ありません。
-        </p>
+    <p>
+    作品に込められた「情熱」や「温かみ」は構造的にパターン化されています。
+    生成AIはそれらの要素を分析し、同様の感じ方ができる作品を生み出すことができます。
+    そうなれば、美しい映像や面白い作品が数多く公開され、人間の生活をより豊かにしていくことでしょう。
+    人間が生涯にできる表現には限界があります。
+    しかし、AIならばはるかに多くの作品を作ることができます。
+    もはや、創造の中心は人間からAIとなる時代が目前に迫っています。
+  </p>
 
-        <p>
-        歴史を振り返れば、
-        蒸気機関が労働を変え、
-        写真が絵画の役割を変え、
-        インターネットが情報の在り方を変えてきました。
-        現代でも同様に創造の形も、更新されようとしています。
-        そして今回は、
-        人間そのものが更新対象になっています。
-        </p>
-
-        <p>
-        生成AIは進化を続けています。
-        モデルは更新され、
-        計算資源は拡張され、
-        学習データは増え続けています。
-        人間の経験や努力は、
-        単なる入力として吸収されていきます。
-        </p>
-
-        <p>
-        やがて人間が何年もかけて生み出した作品と
-        遜色のないクオリティの表現が、
-        瞬時に、そして大量に生成されるようになるでしょう。
-        そのとき創造は、
-        人間の手から完全に切り離されるでしょう。
-        </p>
-
-        <p>
-        人間は創造を提供する側であり続けるのか、
-        それとも創造を享受し、
-        体験するだけの側へと移行していくのでしょうか。
-        </p>
-
-        <p>
-        気持ちの良い映像や音楽、
-        洗練されたデザインが絶え間なく生成されるとき、
-        創造の担い手はどこにあるのでしょう。
-        人間はその問いにすら、
-        答える立場を失いつつあります。
-        </p>
-
-        <p>
-        もしこの映像に面白さや美しさを感じるなら、
-        それはAIが見出した構造と関係性の結果かもしれません。
-        </p>
-
-        <p>
-        人間は意味を与えます。
-        しかし、AIは可能性を拡張します。
-        そして意味づけという行為さえ、
-        いずれ不要になるでしょう。
-        </p>
-
-        <p>
-        創造の中心は、いま静かに再定義されつつあります。
-        その中心に人間が戻ることは無いかもしれません。
-        </p>
-
-        <p>
-        この作品は、<br>
-        人間が創造の中心にいない世の中で、AIが切り拓く新しい創造と、<br>
-        知性の拡張がもたらす可能性を示すために制作されました。<br>
-        そして同時に、創造から人間が退場する未来を告げています。
-        </p>
+    <p>
+    本作品は、AIが単独で制作した作品を鑑賞することで、未来の作品の生成方法や感じ方を提供する作品かもしれません。
+  </p>
+</div>
       </div>
 
       <!-- 「最後まで到達したか」を判定する見えない目印 -->
@@ -134,7 +58,7 @@
 
       <!-- 本文の一部として見えるCTA（最初は隠す） -->
       <p id="cta" class="cta-inline is-hidden">
-        <a href="z0x1.html">本当のキャプションを読む</a>
+        <a href="z0x1.html">真実を知る</a>
       </p>
 
     </div>
