強調を追加

--- a/k7f3.html
+++ b/k7f3.html
@@ -22,7 +22,7 @@
     本作品の映像はプログラムによって動作しており、
     アルゴリズム設計、描画構造、色彩変化や動きは、
     生成AI（ChatGPT 5.2）が提案し、生成し、最適化した結果です。
-    そこに人間は関与していません。
+    <br><strong>そこに人間は関与していません。</strong>
   </p>
 
   <p>
