--- a/m2q9.html
+++ b/m2q9.html
@@ -24,7 +24,8 @@
         本作品の映像はプログラムによって動作しており、
         アルゴリズム設計、描画構造、色彩変化や動きは、
         作者が意図し、選び取り、責任を引き受けた結果です。
-        そこに生成AIの介入はありません。
+        
+        br><strong>そこに生成AIの介入はありません。</strong>
       </p>
 
       <p>
