--- a/m2q9.html
+++ b/m2q9.html
@@ -25,7 +25,7 @@
         アルゴリズム設計、描画構造、色彩変化や動きは、
         作者が意図し、選び取り、責任を引き受けた結果です。
         
-        br><strong>そこに生成AIの介入はありません。</strong>
+        <br><strong>そこに生成AIの介入はありません。</strong>
       </p>
 
       <p>
