--- a/z0x1.html
+++ b/z0x1.html
@@ -24,9 +24,9 @@
 
       <div class="text">
         <p>
-          こちらのキャプションが本作品の本当のキャプションになっています。
+          こちらが本作品の本当のキャプションになっています。
         </p>
-        
+
         <p>
           本作品は、生成AI（ChatGPT）と作者の共作です。
         </p>
@@ -109,11 +109,11 @@
 
       <div class="footer-buttons">
   <a class="footer-btn" href="k7f3.html">
-    AIに対して批判的なキャプション
+    AIに対して批判的なキャプションを見る
   </a>
 
   <a class="footer-btn" href="m2q9.html">
-    AIに対して肯定的なキャプション
+    AIに対して肯定的なキャプションを見る
   </a>
 </div>
 
